Alignment Issues
Fixed top site navigation
Fixed h1 tag alignment by using inline css

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -37,8 +37,9 @@ body {
 		@include font-rem(16);
 	}
 	@media #{$x-large} {
-		@include grid(12,1.5);
-		@include prefix(12,2);
+		@include grid(12,2);
+		@include prefix(12,0.5);
+		@include suffix(12,0.5);
 	}
 }
 
@@ -224,6 +225,9 @@ $button-size: 1.5rem;
 	clear: both;
 	margin-top: 2em;
 	h1 {
+		margin-top: 0;
+	}
+	h2 {
 		margin-top: 0;
 	}
 	.post,
